WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316166
Log ProcessTerminationReason as a string when WebProcess is terminated
https://bugs.webkit.org/show_bug.cgi?id=316166
Summary
Log ProcessTerminationReason as a string when WebProcess is terminated
rupin
Reported
2026-06-02 20:49:59 PDT
Log ProcessTerminationReason as a string when WebProcess is terminated
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-02 20:50:06 PDT
<
rdar://problem/178582138
>
rupin
Comment 2
2026-06-02 21:00:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66332
EWS
Comment 3
2026-06-03 09:26:30 PDT
Committed
314473@main
(9059591049ee): <
https://commits.webkit.org/314473@main
> Reviewed commits have been landed. Closing PR #66332 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug