Log ProcessTerminationReason as a string when WebProcess is terminated https://bugs.webkit.org/show_bug.cgi?id=316166 rdar://178582138

Reviewed by Per Arne Vollan and Simon Fraser.

The logs are easier to understand when the termination reason is printed out as
a human-readable string rather than a reason number which needs to be looked up
in the source code.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::requestTermination):

Canonical link: https://commits.webkit.org/314473@main